--- a/.config/brewfile/Brewfile
+++ b/.config/brewfile/Brewfile
@@ -1,216 +1,176 @@
-vscode "yzhang.markdown-all-in-one"
-vscode "yutengjing.open-in-external-app"
-vscode "wholroyd.jinja"
-vscode "vsls-contrib.gistfs"
-vscode "visualstudioexptteam.vscodeintellicode"
-vscode "visualstudioexptteam.intellicode-api-usage-examples"
-vscode "viktorzetterstrom.non-breaking-space-highlighter"
-vscode "tamasfe.even-better-toml"
-vscode "synapsevscode.synapse"
-vscode "svelte.svelte-vscode"
-vscode "streetsidesoftware.code-spell-checker"
-vscode "samuelcolvin.jinjahtml"
-vscode "rusnasonov.vscode-hugo"
-vscode "redhat.vscode-yaml"
-vscode "randomfractalsinc.vscode-data-preview"
-vscode "postman.postman-for-vscode"
-vscode "openai.openai-chatgpt-adhoc"
-vscode "oliverkovacs.word-count"
-vscode "njpwerner.autodocstring"
-vscode "ms-vscode.wordcount"
-vscode "ms-vscode.powershell"
-vscode "ms-vscode-remote.remote-containers"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.jupyter-keymap"
-vscode "ms-toolsai.datawrangler"
-vscode "ms-python.vscode-pylance"
-vscode "ms-python.python"
-vscode "ms-python.isort"
-vscode "ms-python.flake8"
-vscode "ms-python.debugpy"
-vscode "ms-python.black-formatter"
-vscode "ms-mssql.sql-database-projects-vscode"
-vscode "ms-mssql.sql-bindings-vscode"
-vscode "ms-mssql.mssql"
-vscode "ms-mssql.data-workspace-vscode"
-vscode "ms-dotnettools.vscode-dotnet-runtime"
-vscode "ms-azuretools.vscode-docker"
-vscode "ms-azuretools.vscode-bicep"
-vscode "ms-azuretools.vscode-azureresourcegroups"
-vscode "ms-azuretools.vscode-azurefunctions"
-vscode "moshfeu.compare-folders"
-vscode "mikecunneen.default-keys-macos"
-vscode "mechatroner.rainbow-csv"
-vscode "kevinrose.vsc-python-indent"
-vscode "kenhowardpdx.vscode-gist"
-vscode "jerry-nixon.visualize-api-builder"
-vscode "jerry-nixon.validate-data-api-builder"
-vscode "jerry-nixon.start-data-api-builder"
-vscode "jerry-nixon.poco-data-api-builder"
-vscode "jerry-nixon.omnibus-data-api-builder"
-vscode "jerry-nixon.init-data-api-builder"
-vscode "jerry-nixon.add-data-api-builder"
-vscode "innoverio.vscode-dbt-power-user"
-vscode "grapecity.gc-excelviewer"
-vscode "github.vscode-pull-request-github"
-vscode "github.vscode-github-actions"
-vscode "github.copilot"
-vscode "github.copilot-chat"
-vscode "gerhardbrueckl.powerbi-vscode"
-vscode "george-alisson.html-preview-vscode"
-vscode "evidence.evidence-vscode"
-vscode "ericsia.pythonsnippets3"
-vscode "donjayamanne.python-extension-pack"
-vscode "donjayamanne.python-environment-manager"
-vscode "donjayamanne.githistory"
-vscode "davidanson.vscode-markdownlint"
-vscode "databricks.databricks"
-vscode "danielsanmedium.dscodegpt"
-vscode "csholmq.excel-to-markdown-table"
-vscode "charliermarsh.ruff"
-vscode "budparr.language-hugo-vscode"
-vscode "bradlc.vscode-tailwindcss"
-vscode "batisteo.vscode-django"
-vscode "atomiks.moonlight"
-vscode "arniu.sql-formatter-vscode"
-vscode "1password.op-vscode"
-tap "rcmdnk/file"
-tap "microsoft/mssql-release"
-tap "microsoft/git"
-tap "jandedobbeleer/oh-my-posh"
-tap "homebrew/services"
-tap "homebrew/cask"
-tap "homebrew/bundle"
-tap "buo/cask-upgrade"
-tap "azure/functions"
-mas "Windows App", id: 1295203466
-mas "Uninstall Ghostery", id: 1436953057
-mas "Toggl Track", id: 1291898086
-mas "Todoist", id: 585829637
-mas "The Unarchiver", id: 425424353
-mas "Save to Reader", id: 1640236961
-mas "Save to Pocket", id: 1477385213
-mas "Presentify", id: 1507246666
-mas "Pocket", id: 568494494
-mas "Pages", id: 409201541
-mas "Magnet", id: 441258766
-mas "Kindle", id: 302584613
-mas "IPTV Expert", id: 1641944027
-mas "iMovie", id: 408981434
-mas "Hue Essentials", id: 1462943921
-mas "Focus for YouTube", id: 1514703160
-mas "DuckDuckGo", id: 663592361
-mas "DuckDuckGo Privacy for Safari", id: 1482920575
-mas "Brother iPrint&Scan", id: 1193539993
-mas "Amphetamine", id: 937984704
-mas "1Password for Safari", id: 1569813296
-cask "zoom"
-cask "vlc"
-cask "visual-studio-code"
-cask "utm"
-cask "transmission"
-cask "thunderbird"
-cask "tabby"
-cask "syncthing"
-cask "slack"
-cask "shottr"
-cask "rocket"
-cask "powershell"
-cask "only-switch"
-cask "obsidian"
-cask "obs"
-cask "nordvpn"
-cask "ngrok"
-cask "mountain-duck"
-cask "miro"
-cask "microsoft-office"
-cask "microsoft-edge"
-cask "microsoft-azure-storage-explorer"
-cask "microsoft-auto-update"
-cask "mediainfo"
-cask "google-chrome"
-cask "github"
-cask "git-credential-manager"
-cask "git-credential-manager"
-cask "gimp"
-cask "freedom"
-cask "font-fira-code-nerd-font"
-cask "font-caskaydia-cove-nerd-font"
-cask "font-cascadia-code"
-cask "excalidrawz"
-cask "elgato-video-capture"
-cask "dropbox"
-cask "dotnet-sdk"
-cask "discord"
-cask "daisydisk"
-cask "cyberduck"
-cask "cryptomator"
-cask "choosy"
-cask "ccleaner"
-cask "brave-browser"
-cask "balenaetcher"
-cask "azure-data-studio"
-cask "affinity-photo@1"
-cask "1password"
-cask "1password-cli"
-brew "yarn"
-brew "wimlib"
-brew "tree-sitter"
-brew "transmission-cli"
-brew "tesseract"
-brew "tcl-tk"
-brew "sqlcmd"
-brew "ruby"
-brew "ruby-build"
-brew "rcmdnk/file/brew-file"
-brew "rbenv"
-brew "qpdf"
-brew "python@3.13"
-brew "python@3.12"
-brew "python@3.11"
-brew "python-packaging"
-brew "poppler"
-brew "podman"
-brew "pinentry"
-brew "pandoc"
-brew "openjpeg"
-brew "openjdk@17"
-brew "ollama", restart_service: :changed
-brew "nss"
-brew "nspr"
-brew "npth"
-brew "node"
-brew "mono-libgdiplus"
-brew "microsoft/mssql-release/msodbcsql18"
-brew "mas"
-brew "libzip"
-brew "libusb"
-brew "libksba"
-brew "libgpg-error"
-brew "libgcrypt"
-brew "libassuan"
-brew "jpeg-xl"
-brew "jansson"
-brew "jandedobbeleer/oh-my-posh/oh-my-posh"
-brew "imagemagick"
-brew "hugo"
-brew "gpgme"
-brew "go"
-brew "gnupg"
-brew "git"
-brew "git-filter-repo"
-brew "gdbm"
-brew "ffmpeg"
-brew "exercism"
-brew "emacs"
-brew "duckdb"
-brew "coreutils"
-brew "cask"
-brew "cascadia"
-brew "bfg"
-brew "azure/functions/azure-functions-core-tools@4"
-brew "azure-cli"
-brew "apache-spark"
+tap 'rcmdnk/file'
+tap 'microsoft/mssql-release'
+tap 'microsoft/git'
+tap 'jandedobbeleer/oh-my-posh'
+tap 'homebrew/services'
+tap 'homebrew/bundle'
+tap 'buo/cask-upgrade'
+tap 'azure/functions'
+mas 'Windows App (11.1.3)', id: 1295203466
+mas 'Toggl Track (10.8.0)', id: 1291898086
+mas 'Todoist (9.12.1)', id: 585829637
+mas 'The Unarchiver (4.3.8)', id: 425424353
+mas 'Save to Reader (0.16.8)', id: 1640236961
+mas 'Save to Pocket (1.1)', id: 1477385213
+mas 'Presentify (4.2.0)', id: 1507246666
+mas 'Pocket (1.8.7)', id: 568494494
+mas 'Pages (14.3)', id: 409201541
+mas 'Magnet (3.0.6)', id: 441258766
+mas 'IPTV Expert (8.1.2)', id: 1641944027
+mas 'iMovie (10.4.3)', id: 408981434
+mas 'Hue Essentials (4.2.7)', id: 1462943921
+mas 'GhosteryLite (10.3.12)', id: 1436953057
+mas 'Focus for YouTube (2.4)', id: 1514703160
+mas 'DuckDuckGo Privacy for Safari (1.8.0)', id: 1482920575
+mas 'DuckDuckGo (1.128.0)', id: 663592361
+mas 'Brother iPrint&Scan (12.1.0)', id: 1193539993
+mas 'Amphetamine (5.3.2)', id: 937984704
+mas 'Amazon Kindle (7.27.1)', id: 302584613
+mas '1Password for Safari (8.10.64)', id: 1569813296
+cask 'zoom'
+cask 'vlc'
+cask 'visual-studio-code'
+cask 'utm'
+cask 'transmission'
+cask 'thunderbird'
+cask 'tabby'
+cask 'syncthing'
+cask 'slack'
+cask 'shottr'
+cask 'rocket'
+cask 'powershell'
+cask 'only-switch'
+cask 'obsidian'
+cask 'obs'
+cask 'nordvpn'
+cask 'ngrok'
+cask 'mountain-duck'
+cask 'miro'
+cask 'microsoft-office'
+cask 'microsoft-edge'
+cask 'microsoft-azure-storage-explorer'
+cask 'microsoft-auto-update'
+cask 'mediainfo'
+cask 'google-chrome'
+cask 'github'
+cask 'git-credential-manager'
+cask 'gimp'
+cask 'freedom'
+cask 'font-fira-code-nerd-font'
+cask 'font-caskaydia-cove-nerd-font'
+cask 'font-cascadia-code'
+cask 'excalidrawz'
+cask 'elgato-video-capture'
+cask 'dropbox'
+cask 'dotnet-sdk'
+cask 'discord'
+cask 'daisydisk'
+cask 'cyberduck'
+cask 'cursor'
+cask 'cryptomator'
+cask 'choosy'
+cask 'ccleaner'
+cask 'brave-browser'
+cask 'balenaetcher'
+cask 'azure-data-studio'
+cask 'affinity-photo@1'
+cask '1password'
+cask '1password-cli'
+brew 'zstd'
+brew 'yarn'
+brew 'xz'
+brew 'xorgproto'
+brew 'wimlib'
+brew 'webp'
+brew 'unixodbc'
+brew 'unbound'
+brew 'tree-sitter'
+brew 'transmission-cli'
+brew 'tesseract'
+brew 'tcl-tk'
+brew 'sqlite'
+brew 'sqlcmd'
+brew 'ruby'
+brew 'ruby-build'
+brew 'readline'
+brew 'rbenv'
+brew 'qpdf'
+brew 'python@3.13'
+brew 'python@3.12'
+brew 'python@3.11'
+brew 'python-packaging'
+brew 'poppler'
+brew 'podman'
+brew 'pkgconf'
+brew 'pixman'
+brew 'pinentry'
+brew 'pcre2'
+brew 'pango'
+brew 'pandoc'
+brew 'p11-kit'
+brew 'openssl@3'
+brew 'openjpeg'
+brew 'openjdk@17'
+brew 'ollama'
+brew 'nss'
+brew 'nspr'
+brew 'npth'
+brew 'node'
+brew 'nettle'
+brew 'msodbcsql18'
+brew 'mpdecimal'
+brew 'mono-libgdiplus'
+brew 'miniupnpc'
+brew 'mas'
+brew 'm4'
+brew 'lzo'
+brew 'lz4'
+brew 'little-cms2'
+brew 'libyaml'
+brew 'libxrender'
+brew 'libxext'
+brew 'libxdmcp'
+brew 'libxcb'
+brew 'libxau'
+brew 'libx11'
+brew 'libuv'
+brew 'libusb'
+brew 'libunistring'
+brew 'libtool'
+brew 'libtommath'
+brew 'libtiff'
+brew 'libtasn1'
+brew 'libpng'
+brew 'libnghttp2'
+brew 'libksba'
+brew 'libidn2'
+brew 'libgpg-error'
+brew 'libgcrypt'
+brew 'libexif'
+brew 'libevent'
+brew 'libb2'
+brew 'libassuan'
+brew 'libarchive'
+brew 'leptonica'
+brew 'jpeg-turbo'
+brew 'icu4c@76'
+brew 'harfbuzz'
+brew 'graphite2'
+brew 'gpgme'
+brew 'gnutls'
+brew 'gnupg'
+brew 'gmp'
+brew 'glib'
+brew 'giflib'
+brew 'gettext'
+brew 'fribidi'
+brew 'freetype'
+brew 'fontconfig'
+brew 'cairo'
+brew 'ca-certificates'
+brew 'c-ares'
+brew 'brotli'
+brew 'brew-file'
+brew 'autoconf'
+# tap repositories and their packages
+# App Store applications
